--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: todo_advance_production
+  database: task_checker_backend
   username: admin
   password: <%= Rails.application.credentials.db[:password] %>
   host: <%= Rails.application.credentials.db[:hostname] %>
